--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Lixie
-version=1.0.0
+version=2.0.0
 author=Connor Nishijima
-maintainer=Connor Nishijima <connornishijima@gmail.com>
+maintainer=Michael Copland
 sentence=Allows for easy writing to Lixie Digit displays!
-paragraph=This library takes care of all the Lixie LED addressing and updating for you! All you have to do is write a number to the displays!
+paragraph=This library takes care of all the Lixie LED addressing and updating for you. All you have to do is write a number to the displays.
 category=Signal Input/Output
-url=https://github.com/connornishijima/Lixie-arduino
-architectures=avr
+url=https://github.com/mjbcopland/Lixie
+architectures=*
